--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -20,10 +20,14 @@
     "@thoughts/rpc": "workspace:*",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.556.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
@@ -33,6 +37,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
