fixed env issue + added bad sidecar logging

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "db:migrate": "pnpm --filter @thoughts/db exec drizzle-kit migrate",
     "db:push": "pnpm --filter @thoughts/db exec drizzle-kit push",
     "db:studio": "pnpm --filter @thoughts/db exec drizzle-kit studio",
-    "db:check": "pnpm --filter @thoughts/db exec drizzle-kit check"
+    "db:check": "pnpm --filter @thoughts/db exec drizzle-kit check",
+    "build:rpc": "pnpm --filter @thoughts/rpc build",
+    "build:all": "pnpm build:rpc && pnpm --filter @thoughts/desktop build"
   },
   "keywords": [],
   "author": "",
