add v0 replay viewer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["apps/**/*", "packages/**/*"]
+  "include": ["apps/**/*", "packages/**/*"],
+  "exclude": ["packages/actions/scripts/**/*"]
 }
