--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@thoughts/db": "workspace:*",
     "better-sqlite3": "^11.0.0",
     "dotenv": "^16.3.1"
   },
