--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -13,10 +13,15 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "@thoughts/db": "workspace:*",
     "better-sqlite3": "^11.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "figlet": "^1.10.0",
+    "marked": "^17.0.0",
+    "marked-terminal": "^7.3.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
+    "@types/figlet": "^1.7.0",
+    "@types/marked-terminal": "^6.1.1",
     "@types/node": "^22.10.5",
     "tsx": "^4.19.4",
     "typescript": "^5.0.0"
